Updated explanations with the Complexity tagging

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,15 @@
                 </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.example.explanation.ComprehensiveExplanationMain</mainClass>
+                </configuration>
+            </plugin>
+
             <!-- Compile with Java 17 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
